Weekly Update for Blog

--- a/_posts/2020-09-11-Week-2.md
+++ b/_posts/2020-09-11-Week-2.md
@@ -1,8 +1,8 @@
 Happy Friday everyone, it is the end of the week, which means that it's time for me to make another update on the tech side of my life!
 
-Today was the first day back at my other internship, which is primarily IT Support, with some security roles built in. For the most part the week there has involved a lot of SharePoint activities, mixed with some web-security related tasks that we had beem working on for the past few months. Not much else happened there, as most of the time this week was spent getting me back used to the way things worked there, since I had been gone since early July at my other internship.
+Today was the first day back at my other internship, which is primarily IT Support, with some security roles built in. For the most part the week there has involved a lot of SharePoint activities, mixed with some web-security related tasks that we had been working on for the past few months. Not much else happened there, as most of the time this week was spent getting me back used to the way things worked there, since I had been gone since early July at my other internship.
 
-Outside of work, I have been doing a lot of assignments for my web dev class, which is still in the phase of teaching us basic HTML. Come to think of it, the fact that we are in the HTML/CSS phase, it almost makes me want to make these blog posts in HTML/CSS instead of markdown, which is what I have been doing for simplicity's sake... Apart from this digression, I have also been doing some work for my CIT 496 clas project with my group. We just got access to Jira, so we are getting acclimated to that. We set up some tasks that we need to get done for the current "sprint", which is a 2 week long drive to get things done (still getting used to this terminology). In my CIT 425 class, I have STILL yet to start the lab that is now due a week from today, so I really need to make a reminder to get those VMs set up and create the webpage for me to compromise and deface...
+Outside of work, I have been doing a lot of assignments for my web dev class, which is still in the phase of teaching us basic HTML. Come to think of it, the fact that we are in the HTML/CSS phase, it almost makes me want to make these blog posts in HTML/CSS instead of markdown, which is what I have been doing for simplicity's sake... Apart from this digression, I have also been doing some work for my CIT 496 class project with my group. We just got access to Jira, so we are getting acclimated to that. We set up some tasks that we need to get done for the current "sprint", which is a 2 week long drive to get things done (still getting used to this terminology). In my CIT 425 class, I have STILL yet to start the lab that is now due a week from today, so I really need to make a reminder to get those VMs set up and create the webpage for me to compromise and deface...
 
 Outside of all this, CCDC took a break last Sunday, so I expect to meet with them this Sunday to get a bunch of things done, and I actually have something useful to bring to the table... Further, I have just made a mental note that I need to spend some time to prep myself to take Security+, because I have been putting that off for far too long.
 
